# ezno_convert

./: .gitignore  README.md  build.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
examples/: test.docx  test.pptx  test.xlsx
ezno_convert/: __init__.py  cli.py  common.py  context.py  convert.py  enums.py  gui.py
