[metadata]
name = ezno_convert
url = https://github.com/ofersadan85/ezno_convert
license = MIT
license_files = LICENSE
author = Ofer Sadan
author_email = ofersadan85@gmail.com
description = Convert office files quickly and easily through CLI, GUI, or windows explorer context menu
long_description_content_type = text/markdown
long_description = file:README.md
include_package_data = True
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Intended Audience :: End Users/Desktop
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Desktop Environment :: File Managers
    Topic :: Office/Business
    Topic :: Office/Business :: Financial :: Spreadsheet
    Topic :: Office/Business :: Office Suites
    Topic :: Printing
    Topic :: Text Editors :: Word Processors
    Topic :: Text Processing
    Topic :: Text Processing :: General
    Topic :: Utilities


[options]
python_requires = >=3.6
install_requires =
    comtypes>=1.1.8
    progressbar2>=3.53.1
    dataclasses;python_version<'3.7'

[options.packages.find]
exclude =
        build*
        docs*
        tests*
        *.tests
        tools*

[options.extras_require]
gui =
    wxPython>=4.1.1

[options.entry_points]
console_scripts =
    eznoc = native_office_converter.cli:main
    eznoc-gui = native_office_converter.gui:main [gui]
